# WeaverTools

./: .auto-claude-status  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  autoclaude_eval.md
.auto-claude/: .env.example
.chglog/: CHANGELOG.tpl.md  config.yml
TheLoom/: CLAUDE.md  CONVEYANCE_MODEL_LOADER_INTEGRATION.md  conveyance-hypothesis-v4.1.md
TheLoom/the-loom/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  the-loom.service
TheLoom/the-loom/config/: default.yaml  loom_demo.yaml
TheLoom/the-loom/demo/: README.md  generate_visualizations.py  run_geometric_analysis.py
TheLoom/the-loom/demo/outputs/: metrics_summary.md
TheLoom/the-loom/demo/outputs/analysis/: metrics_summary.md
TheLoom/the-loom/demo/outputs/model_a/: layer_metrics.json  responses.json
TheLoom/the-loom/demo/outputs/model_b/: layer_metrics.json  responses.json
TheLoom/the-loom/docs/: KAKEYA_INTEGRATION.md  memory-requirements.md
TheLoom/the-loom/examples/: layer_by_layer_analysis.ipynb  layer_by_layer_analysis.py
TheLoom/the-loom/examples/outputs/: analyze_output.json  batch_embed.json  embed_basic.json  generate_all_layers.json  generate_full_sequence.json  generate_hidden_states.json  generate_multiple_layers.json  hidden_state_base64_format.json
TheLoom/the-loom/src/: __init__.py  client.py  config.py  server.py
TheLoom/the-loom/src/analysis/: __init__.py  agent_flow.py  aligned_pca.py  atlas_statistics.py  batch_pipeline.py  concept_landscape.py  conveyance_metrics.py  kakeya_geometry.py  layer_utils.py  memory_tracing.py  visualization.py
TheLoom/the-loom/src/assets/tokenizers/mt5_shakespeare_pruned/: vocab_mapping.json
TheLoom/the-loom/src/extraction/: __init__.py  hidden_states.py
TheLoom/the-loom/src/loaders/: __init__.py  atlas_loader.py  atlas_model.py  atlas_tokenizer.py  base.py  custom_loader.py  mistral_loader.py  qwen_loader.py  registry.py  sentence_transformers_loader.py  transformers_loader.py
TheLoom/the-loom/src/patching/: __init__.py  cache.py  experiments.py  hooks.py
TheLoom/the-loom/src/persistence/: __init__.py  database.py  export.py  query.py  storage.py
TheLoom/the-loom/src/training/: __init__.py  atlas_trainer.py  dashboard.py
TheLoom/the-loom/src/transport/: __init__.py  http.py
TheLoom/the-loom/src/utils/: __init__.py  gpu.py  metrics.py  serialization.py
TheLoom/the-loom/tests/: __init__.py  e2e_analysis_pipeline.py  e2e_training_dashboard.py  test_agent_flow.py  test_analysis.py  test_atlas_analysis.py  test_atlas_loader.py  test_atlas_training.py  test_client.py  test_config.py  test_conveyance_metrics.py  test_export.py  test_extraction.py  test_gpu.py  test_integration.py  test_loaders.py  test_memory_optimization.py  test_patching.py  test_patching_integration.py  test_persistence.py  test_serialization.py  test_server.py
Weaver/: config.yaml  go.mod  go.sum
Wool/: agent.go  agent_test.go  go.mod  role.go  role_test.go
Yarn/: conversation.go  conversation_store.go  conversation_store_test.go  conversation_test.go  deprecated_example.go  doc.go  go.mod  measurement.go  measurement_test.go  message.go  message_test.go  registry.go  registry_test.go  session.go  session_test.go  validation.go  validation_test.go
docs/: COMPATIBILITY.md  (+2 more)
experiments/: pyproject.toml
experiments/examples/: basic_experiment.yaml
experiments/src/: __init__.py  config.py  metrics.py  orchestrator.py  reproducibility.py  runner.py  schema.py  storage.py
experiments/tests/: __init__.py  test_config.py  test_integration.py  test_metrics.py  test_runner.py  test_schema.py  test_storage.py
(+429 files in other folders)
