[tool.poetry]
name = "experiment-framework"
version = "0.1.0"
description = "Experiment Automation Framework - YAML-based experiment configuration and orchestration for multi-agent scenarios (part of the Weaver ecosystem)"
readme = "README.md"
license = "Apache-2.0"
authors = ["Todd Bucy"]
keywords = ["machine-learning", "research", "experiments", "automation", "multi-agent", "weaver", "orchestration"]
packages = [{include = "src"}]

[tool.poetry.scripts]
experiment = "src.runner:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyyaml = "^6.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
mlflow = {version = "^2.0.0", optional = true}

[tool.poetry.extras]
mlflow = ["mlflow"]
all = ["mlflow"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
ruff = "^0.1.0"
types-pyyaml = "^6.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
